manifest/ingress-dns.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Pod
metadata:
  name: kube-ingress-dns
  namespace: kube-system
  labels:
    app: kube-ingress-dns
    app.kubernetes.io/part-of: kube-system
spec:
  serviceAccountName: kube-ingress-dns
  hostNetwork: true
  containers:
    - name: kube-ingress-dns
      image: tomlawton89/kube-ingress-dns:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 53
          protocol: UDP
